Refatorando repositório